fixed dark mode toggle bug

--- a/client/src/components/theme-toggle/ThemeToggle.module.scss
+++ b/client/src/components/theme-toggle/ThemeToggle.module.scss
@@ -22,7 +22,7 @@
   }
 }
 
-.slider {
+.slider-box {
   position: absolute;
   cursor: pointer;
   top: 0;
@@ -31,38 +31,25 @@
   bottom: 0;
   background-color: themes.$primary-color;
   transition: ease transform 200ms;
-  &:before {
+  border-radius: 24px;
+  .slider {
     position: absolute;
-    content: "";
     height: 18px;
     width: 18px;
     left: 3px;
     bottom: 3px;
     background-color: white;
-    transition: 200ms;
+    transition: ease transform 200ms;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-  &.round {
-    border-radius: 24px;
-    &:before {
-      border-radius: 50%;
-    }
-  }
-  &.dark:before {
-    background-color: black;
+  &.dark {
+    background-color: rgb(60, 60, 60);
   }
 }
 
-.icons {
-  position: absolute;
-  left: 3px;
-  bottom: 3px;
-  display: flex;
-  height: 18px;
-  width: 18px;
-  justify-content: center;
-  align-items: center;
-  transition: ease transform 200ms;
-  .icon {
-    color: themes.$tertiary-color;
-  }
+.icon {
+  color: themes.$tertiary-color;
 }
